--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "organizer-files-cli",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "CLI pour organiser et restaurer des fichiers.",
   "main": "organizer.js",
   "bin": {
-    "organize": "./organizer.js",
-    "restore": "./restorer.js"
+    "organize": "organizer.js",
+    "restore": "restorer.js"
   },
   "scripts": {
     "organize": "node organizer.js",
